[package]
name = "repo-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "macros", "fs", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
fs-err = { version = "3", features = ["tokio"] }
indicatif = "0.17"
owo-colors = "4"
anstream = "0.6"
dirs = "5"
futures = "0.3"
regex = "1"
ctrlc = "3"
tokio-util = "0.7"
bytes = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
